# status-report

./: .codecov.yml  .coveragerc  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  pyproject.toml  pytype.cfg  xen-bugtool
.github/instructions/: darker.instructions.md
.github/template/bugtool-run-all-entries/: action.yaml
.github/template/bugtool-run-entry/: action.yaml
.github/workflows/: dom0-tests.yml  main.yml  tests.yml
stubs/: XenAPI.pyi
tests/integration/dom0-template/etc/xensource/bugtool/mock/: stuff.xml
tests/mocks/xen/lowlevel/xc/: __init__.py
tests/unit/: conftest.py  test_fs_funcs.py  test_load_plugins.py  test_main.py  test_output.py  test_xapidb_filter.py
