[project]
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
name = "xenserver-status-report"
dynamic = ["version"]
description = "Xenserver Status Report"
requires-python = ">=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*"
license = "LGPL-2.1-only"
keywords = ["xenserver", "xen-project"]
authors = [
    {name = "Ewan Mellor"},
    {name = "Simon Rowe"},
]
maintainers = [
    {name = "Ashwin H"},
    {name = "Bernhard Kaindl"},
    {name = "Pau Ruiz Safont"},
    {name = "Ross Lagerwall"},
]
readme = "README.md"
classifiers = [
    "Environment :: Console",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: POSIX :: Linux :: XenServer/XCP-ng Dom0",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "defusedxml",
    "six",
]

[project.optional-dependencies]
test = [
    "pytest<7",
]

[dependency-groups]
dev = [
    "basedpyright",
    "black",
    "isort",
    "mypy",
    "pytest<7",
    "pytest-mock",
    "types-defusedxml",
    "types-six",
]

[project.urls]
homepage = "https://github.com/xenserver/status-report/"
repository = "https://github.com/xenserver/status-report/"

[build-system]
requires = ["setuptools>=42", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# This section is needed (can be empty) for setuptools_scm to be used by
# "pip2 install ." in order to get the version number from the git repo.

[tool.black]
line-length = 108

[tool.isort]
line_length = 108
py_version = 27
profile = "black"
combine_as_imports = true
ensure_newline_before_comments = false
# extra standard libraries of Py2:
extra_standard_library = "commands"

[tool.mypy]
files = ["xen-bugtool", "tests"]
pretty = true
error_summary = true
strict_equality = true
show_error_codes = true
show_error_context = true
# Check the contents of untyped functions in all modules by default:
check_untyped_defs = true
scripts_are_modules = true
python_version = "3.11"
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_redundant_casts = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_subclassing_any = true

[[tool.mypy.overrides]]
module = ["xen-bugtool"]
# Disabled for now, may get fixed by later changes:
disable_error_code = [
    "union-attr",
    "arg-type",
    "attr-defined",
    "name-defined",
    "import-not-found",
    "import-untyped",
    "operator",
    "var-annotated",
    "assignment",
    "misc",
    "no-any-unimported",
    "no-untyped-call",
    "no-untyped-def",
    # "str-format", # Will be easy to fix
    "unreachable"
]


[tool.pyright]
include = ["xen-bugtool", "tests"]
pythonPlatform = "Linux"
pythonVersion = "3.6"
stubPath = "stubs"

typeCheckingMode = "strict"
# Exceptions to strict mode:
reportConstantRedefinition = false
reportImplicitStringConcatenation = false
reportMissingParameterType = false
reportTypeCommentUsage = false
reportUninitializedInstanceVariable = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false

# exclusive settings for basedpyright
# https://docs.basedpyright.com/v1.22.1/configuration/config-files/#basedpyright-exclusive-settings_2
reportAny = false
reportIgnoreCommentWithoutRule = false
reportUnannotatedClassAttribute = false
reportUnreachable = false
reportUnusedParameter = false
